[gd_scene load_steps=17 format=3 uid="uid://bl7av5wiuxxt"]

[ext_resource type="Script" uid="uid://dcqcp4542jk5q" path="res://dice.gd" id="1_amxts"]
[ext_resource type="Texture2D" uid="uid://cfil7155o72wo" path="res://Dice/PixelDice_White.png" id="2_olbok"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1r5xe"]
atlas = ExtResource("2_olbok")
region = Rect2(0, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp43f"]
atlas = ExtResource("2_olbok")
region = Rect2(28, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_mliu0"]
atlas = ExtResource("2_olbok")
region = Rect2(56, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl0ab"]
atlas = ExtResource("2_olbok")
region = Rect2(84, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_3et6s"]
atlas = ExtResource("2_olbok")
region = Rect2(112, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpdaw"]
atlas = ExtResource("2_olbok")
region = Rect2(140, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8dnt"]
atlas = ExtResource("2_olbok")
region = Rect2(0, 140, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_634gy"]
atlas = ExtResource("2_olbok")
region = Rect2(0, 140, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn7co"]
atlas = ExtResource("2_olbok")
region = Rect2(28, 140, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_oclwl"]
atlas = ExtResource("2_olbok")
region = Rect2(56, 140, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra1qq"]
atlas = ExtResource("2_olbok")
region = Rect2(84, 140, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn1yo"]
atlas = ExtResource("2_olbok")
region = Rect2(112, 140, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3f73"]
atlas = ExtResource("2_olbok")
region = Rect2(140, 140, 28, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_dblop"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r5xe")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp43f")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mliu0")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl0ab")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3et6s")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpdaw")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8dnt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_634gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn7co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oclwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra1qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn1yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3f73")
}],
"loop": true,
"name": &"throw",
"speed": 20.0
}]

[node name="Dice" type="Node2D"]
script = ExtResource("1_amxts")
metadata/_edit_group_ = true

[node name="Dice_Animation" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(8, 8)
scale = Vector2(1.57143, 1.57143)
sprite_frames = SubResource("SpriteFrames_dblop")
animation = &"throw"

[node name="Dice_Timer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="Dice_Timer" to="." method="_on_dice_timer_timeout"]
